--- a/templates/vk/vk_integration.html
+++ b/templates/vk/vk_integration.html
@@ -1,11 +1,11 @@
 {% include "vk/vk_init.html" %}
 
 <script src="{{url_for('static', filename='js/vk/integration.js')}}"></script>
-<div class="s-buttons" id="vk_integration">
-    <p
-    class="btn btn-primary" 
-    id="vk_login_button" 
-    onclick="userAuth()">
-    Привязать страницу ВКонтакте
-    </p>
-</div>
+<button
+  id="vk_integration"
+  class="btn btn-primary"
+  id="vk_login_button"
+  onclick="userAuth()"
+>
+  Привязать страницу ВКонтакте
+</button>
