notify about VK integration

--- a/templates/mails/email/edit_email.html
+++ b/templates/mails/email/edit_email.html
@@ -4,5 +4,5 @@
     {% set url = url_for('web_utils.edit_email', token=token, _external=True) %}
     <a href="{{ url }}">ссылке</a>:<br>
     <a href="{{ url }}">{{ url }}</a>
-    Если вы не пытались изменить почту - проигнорируйте это сообщение.
 </p>
+<p>Если вы не пытались изменить почту - проигнорируйте это сообщение.</p>
