--- a/templates/league.html
+++ b/templates/league.html
@@ -32,39 +32,41 @@
 {% macro team_th(team) %}
   <th class="team_name"><a class="shadow_link" href="{{team.link}}">{{team.name}}</a></th>
 {% endmacro %}
-<div class="box_container">
-  <div class="box w-100">
-    <div class="shadow-box__title">
-      Результаты
-    </div>
-    <div class="big_table_container">
-      <table class="info_table league_table m-2 rounded">
-        <tr>
-          <td></td>
-          {% for team in teams %}
-            {{team_th(team)}}
-          {% endfor %}
-          <td>Сумма баллов</td>
-        </tr>
-        {% for row in table %}
+{% if teams %}
+  <div class="box_container">
+    <div class="box w-100">
+      <div class="shadow-box__title">
+        Результаты
+      </div>
+      <div class="big_table_container">
+        <table class="info_table league_table m-2 rounded">
           <tr>
-            {{team_th(teams[loop.index0])}}
-            {% for cell in row %}
-              <td class="game_cell">
-                {% for res, game in cell %}
-                  <a class="shadow_link" href="{{game.link}}">
-                    {{res}}{% if not loop.last %}, {% endif %}
-                  </a>
-                {% endfor %}
-              </td>
+            <td></td>
+            {% for team in teams %}
+              {{team_th(team)}}
             {% endfor %}
-            <td class="team_points">{{result[loop.index0]}}</td>
+            <td>Сумма баллов</td>
           </tr>
-        {% endfor %}
-      </table>
+          {% for row in table %}
+            <tr>
+              {{team_th(teams[loop.index0])}}
+              {% for cell in row %}
+                <td class="game_cell">
+                  {% for res, game in cell %}
+                    <a class="shadow_link" href="{{game.link}}">
+                      {{res}}{% if not loop.last %}, {% endif %}
+                    </a>
+                  {% endfor %}
+                </td>
+              {% endfor %}
+              <td class="team_points">{{result[loop.index0]}}</td>
+            </tr>
+          {% endfor %}
+        </table>
+      </div>
     </div>
   </div>
-</div>
+{% endif %}
 
 <div class="box_container">
   <div class="box box-tiny">
