--- a/templates/reset_password_step_2.html
+++ b/templates/reset_password_step_2.html
@@ -2,43 +2,35 @@
 {% block title %} Восстановить пароль - MatBoy {% endblock %}
 {% block title_layout %} Восстановить пароль {% endblock %}
 {% block form %}
-    <form
-            class="form form_login s-form validateble"
-            id="reset_password_2_form"
-            method="post"
-            data-remote="true">
-        {{ form.hidden_tag() }}
-        <fieldset class="form__fields">
-            {% from "form_macroses.html" import form_field, field_errors %}
-            {{ form_field(form.password) }}
-            {{ form.password.label(for="password_field", class="form__field-label") }}
-            {{ form.password(
-        type="password",
-
-        class="form__field-input",
-        id="password_field",
-        autocomplete="off"
-      ) }}
-            {{ field_errors(form.password) }}
-            </div>
-            {{ form_field(form.password_again) }}
-            {{ form.password_again.label(for="password_repeat", class="form__field-label") }}
-            {{ form.password_again(
-        type="password",
-
-        class="form__field-input",
-        id="password_repeat",
-        autocomplete="off"
-      ) }}
-            {{ field_errors(form.password_again) }}
-            </div>
-            <div class="form__buttons s-buttons">
-                {{ form.submit(
-        type="submit",
-        id="reset_password_button",
-        class="button button_wide button_primary"
-      ) }}
-            </div>
-        </fieldset>
-    </form>
+  <form
+      class="form form_login s-form validateble"
+      id="reset_password_2_form"
+      method="post"
+      data-remote="true">
+    {{ form.hidden_tag() }}
+    <fieldset class="form__fields">
+      {% from "form_macroses.html" import form_field, field_errors %}
+      {{ form_field(form.password) }}
+        {{ form.password.label(for="password_field", class="form__field-label") }}
+        {{ form.password(type="password",
+                        class="form__field-input",
+                        id="password_field",
+                        autocomplete="off") }}
+        {{ field_errors(form.password) }}
+      </div>
+      {{ form_field(form.password_again) }}
+        {{ form.password_again.label(for="password_repeat", class="form__field-label") }}
+        {{ form.password_again(type="password",
+                              class="form__field-input",
+                              id="password_repeat",
+                              autocomplete="off") }}
+        {{ field_errors(form.password_again) }}
+      </div>
+      <div class="form__buttons s-buttons">
+        {{ form.submit(type="submit",
+                       id="reset_password_button",
+                       class="button button_wide button_primary") }}
+      </div>
+    </fieldset>
+  </form>
 {% endblock %}
