--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" class="h-100">
 <head>
   {% block head %}
     <meta charset="utf-8"/>
@@ -43,7 +43,7 @@
   <title>{% block title %}MatBoy{% endblock %}</title>
 </head>
 
-<body>
+<body class="d-flex flex-column h-100">
 {% block header %}
   <header class="">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -108,14 +108,22 @@
 {% endblock header %}
 {% block main %}
   <!-- Begin page content -->
-  <main role="main" class="container">
+  <main role="main" class="container flex-shrink-0">
     {% block content %}
     {% endblock content %}
   </main>
+
+  <footer class="footer mt-auto py-3 bg-light">
+    <div class="container d-flex justify-content-around">
+      <span class="text-muted">© 2002–2020 Даниил Сотников</span>
+      <span class="text-muted"><a href="/credits">Об авторах</a></span>
+    </div>
+  </footer>
 {% endblock main %}
 
 {% block toasts %}
   {% include 'toasts.html' %}
 {% endblock toasts %}
+
 </body>
 </html>
