--- a/templates/credits.html
+++ b/templates/credits.html
@@ -13,18 +13,21 @@
       [
       {
         "name": "Даниил Сотников",
-        "desc": "Pop Cat (кот широко открывает рот и издаёт звук «буп»)<br>В конце ноября в соцсетях набрали популярность ролики с белым котом, который широко открывает рот, издавая звук «Буп». Теперь животное «подпевает» хитам из 90-х, оказывается в сценах из голливудских фильмов и попадает в разнообразные мемы.",
-        "href": url_for('static', filename="img/credits/daniil.jpg")
+        "desc": "Идейный вдохновитель, главный разработчик, любит котов.",
+        "href": url_for('static', filename="img/credits/daniil.jpg"),
+        "tm": "i3Cheese"
       },
       {
         "name": "Дарья Калашникова",
-        "desc": "Pop Cat (кот широко открывает рот и издаёт звук «буп»)<br>В конце ноября в соцсетях набрали популярность ролики с белым котом, который широко открывает рот, издавая звук «Буп». Теперь животное «подпевает» хитам из 90-х, оказывается в сценах из голливудских фильмов и попадает в разнообразные мемы.",
-        "href": url_for('static', filename="img/credits/darya.jpg")
+        "desc": "Моральная подержка, менеджер, специалист по контакту.",
+        "href": url_for('static', filename="img/credits/darya.jpg"),
+        "tm": "ADari_Ka"
       },
       {
         "name": "Егор Бедак",
-        "desc": "Pop Cat (кот широко открывает рот и издаёт звук «буп»)<br>В конце ноября в соцсетях набрали популярность ролики с белым котом, который широко открывает рот, издавая звук «Буп». Теперь животное «подпевает» хитам из 90-х, оказывается в сценах из голливудских фильмов и попадает в разнообразные мемы.",
-        "href": url_for('static', filename="img/credits/egor.jpg")
+        "desc": "Технический специалист, золотые руки команды.",
+        "href": url_for('static', filename="img/credits/egor.jpg"),
+        "tm": "egor_koder"
       },
       ] %}
     {% for auth in authors %}
@@ -34,6 +37,9 @@
       <h3>{{auth.name}}</h3>
       <div>
         {{auth.desc | safe}}
+      </div>
+      <div>
+        <a href="t.me/{{ auth.tm }}">@{{ auth.tm }}</a>
       </div>
     </div>
     {% endfor %}
