--- a/templates/base.html
+++ b/templates/base.html
@@ -115,7 +115,7 @@
 
   <footer class="footer mt-auto py-3 bg-light">
     <div class="container d-flex justify-content-around">
-      <span class="text-muted">© 2002–2020 Даниил Сотников</span>
+      <span class="text-muted">© 2020 Даниил Сотников</span>
       <span class="text-muted"><a href="/credits">Об авторах</a></span>
     </div>
   </footer>
