--- a/templates/tournament_console.html
+++ b/templates/tournament_console.html
@@ -32,7 +32,7 @@
           {% if team.status == 2 %}
           <div class="box_item team border-success" id="team-{{team.id}}">
             <span class="status team-status">
-            Учавствует в турнире
+            Участвует в турнире
             </span>
           {% else %}
           <div class="box_item team border-warning" id="team-{{team.id}}">
