favicon.ico and credits page menu

--- a/templates/register.html
+++ b/templates/register.html
@@ -122,5 +122,5 @@
 {% endblock form %}
 
 {% block link_to %}
-Уже зарегестрированы?&nbsp;<a href="/login" class="form-additional-message__link">Войдите</a>
+Уже зарегистрированы?&nbsp;<a href="/login" class="form-additional-message__link">Войдите</a>
 {% endblock link_to %}
