--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -66,7 +66,7 @@
         <dt class="col-sm-6">{{ tour.place }}</dt>
         <dd class="col-sm-6">Дата начала:</dd>
         <dt class="col-sm-6">{{ formated_date(tour.start) }}</dt>
-        <dd class="col-sm-6">Дата оканчания:</dd>
+        <dd class="col-sm-6">Дата окончания:</dd>
         <dt class="col-sm-6">{{ formated_date(tour.end) }}</dt>
       </dl>
       {% if current_user.is_authenticated %}
