--- a/static/css/style.css
+++ b/static/css/style.css
@@ -408,7 +408,7 @@ button, input {
 }
 
 .box-tiny{
-    max-width: 400px;
+    max-width: 380px;
 }
 
 .box-middle{
@@ -661,4 +661,11 @@ input[type='checkbox']{
 
 .g-recaptcha div {
     margin: 0 auto;
+}
+
+
+.centered_row > div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
