--- a/templates/league.html
+++ b/templates/league.html
@@ -73,7 +73,7 @@
     <div class="shadow-box__title">
       Команды
     </div>
-    {% for team in league.teams | sort(reverse=True, attribute="created_at") if team.status == 2 %}
+    {% for team in league.teams | sort(attribute="name") if team.status == 2 %}
       <div class="centered_block block_link"
             onclick="redirect(event)"
             href="{{team.link}}"
