--- a/templates/game.html
+++ b/templates/game.html
@@ -81,73 +81,76 @@
           <span class="captain_winner_name">{{game.captain_winner.name}}</span>
         </div>
       {% endif %}
-      <div class="protocol_in big_table_container">
-        <table class="info_table protocol-table m-2 rounded" id="protocol">
-          <tr class="table_header">
-            <th>№</th>
-            <th>Команда</th>
-            <th>Баллы</th>
-            <th>Задача</th>
-            <th>Вызов</th>
-            <th>Баллы</th>
-            <th>Команда</th>
-            <th>Жюри</th>
-            <th>Дополнительная информация</th>
-          </tr>
-          {% for round in rounds %}
+
+      {% if game.protocol['points'] is defined %}
+        <div class="protocol_in big_table_container">
+          <table class="info_table protocol-table m-2 rounded" id="protocol">
+            <tr class="table_header">
+              <th>№</th>
+              <th>Команда</th>
+              <th>Баллы</th>
+              <th>Задача</th>
+              <th>Вызов</th>
+              <th>Баллы</th>
+              <th>Команда</th>
+              <th>Жюри</th>
+              <th>Дополнительная информация</th>
+            </tr>
+            {% for round in rounds %}
+              <tr class="round_form">
+                <td class="row_number symbols">{{loop.index}}</td>
+                <td class="player">
+                  {{round['teams'][0]['player']['fullname']}}
+                  {{stars_block(1, round['teams'][0].get('stars', 0))}}
+                </td>
+                <td class="points symbols">
+                  {{round['teams'][0]['points']}}
+                </td>
+                <td class="symbols">
+                  {{round['problem']}}
+                </td>
+                <td class="type symbols">
+                  {{round_types[round['type'] - 1][1]}}
+                </td>
+                <td class="points symbols">
+                  {{round['teams'][1]['points']}}
+                </td>
+                <td class="player">
+                  {{round['teams'][1]['player']['fullname']}}
+                  {{stars_block(2, round['teams'][1].get('stars', 0))}}
+                </td>
+                <td class="points judge_points symbols">
+                  {{12 - round['teams'][0]['points'] - round['teams'][1]['points']}}
+                </td>
+                <td><textarea name="additional" disabled>{{round['additional']}}</textarea></td>
+              </tr>
+            {% endfor %}
             <tr class="round_form">
-              <td class="row_number symbols">{{loop.index}}</td>
-              <td class="player">
-                {{round['teams'][0]['player']['fullname']}}
-                {{stars_block(1, round['teams'][0].get('stars', 0))}}
+              <td class="row_number symbols">Итого</td>
+              <td>
               </td>
               <td class="points symbols">
-                {{round['teams'][0]['points']}}
+                {{game.protocol['points'][0] | default(0)}}
               </td>
-              <td class="symbols">
-                {{round['problem']}}
+              <td>
+
               </td>
               <td class="type symbols">
-                {{round_types[round['type'] - 1][1]}}
+
               </td>
               <td class="points symbols">
-                {{round['teams'][1]['points']}}
+                {{game.protocol['points'][1] | default(0)}}
               </td>
-              <td class="player">
-                {{round['teams'][1]['player']['fullname']}}
-                {{stars_block(2, round['teams'][1].get('stars', 0))}}
+              <td>
               </td>
               <td class="points judge_points symbols">
-                {{12 - round['teams'][0]['points'] - round['teams'][1]['points']}}
+                {{game.protocol['points'][2] | default(0)}}
               </td>
-              <td><textarea name="additional" disabled>{{round['additional']}}</textarea></td>
+              <td></td>
             </tr>
-          {% endfor %}
-          <tr class="round_form">
-            <td class="row_number symbols">Итого</td>
-            <td>
-            </td>
-            <td class="points symbols">
-              {{game.protocol['points'][0]}}
-            </td>
-            <td>
-
-            </td>
-            <td class="type symbols">
-
-            </td>
-            <td class="points symbols">
-              {{game.protocol['points'][1]}}
-            </td>
-            <td>
-            </td>
-            <td class="points judge_points symbols">
-              {{game.protocol['points'][2]}}
-            </td>
-            <td></td>
-          </tr>
-        </table>
-      </div>
+          </table>
+        </div>
+      {% endif %}
   {% elif game.is_deleted %}
   <h4 style="color: red;">Игра удаленна</h4>
   {% else %}
