--- a/templates/team.html
+++ b/templates/team.html
@@ -10,6 +10,13 @@
   <h1 class="page_title">
     {{team.name}}
   </h1>
+  {% if team.tournament.have_permission(current_user) %}
+    <div class="link_menu">
+      <a class="link-small" href='{{team.link}}/edit'>
+        Изменить
+      </a>
+    </div>
+  {% endif %}
 </div>
 
 {% if team.motto %}
