--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,7 @@
 
 
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/modals.js') }}"></script>
     <link rel="stylesheet" type="text/css"
           href="{{ url_for('static', filename='css/style.css') }}"/>
   {% endblock head %}
@@ -121,7 +122,7 @@
     </div>
   </footer>
 {% endblock main %}
-
+{% include 'modal_windows.html' %}
 {% block toasts %}
   {% include 'toasts.html' %}
 {% endblock toasts %}
