--- a/templates/modal_windows.html
+++ b/templates/modal_windows.html
@@ -1,8 +1,8 @@
 <div id="PromiseConfirm" class="modal">
     <div class="modal-dialog" role="document">
-        <div class="modal-content">
+        <div class="box modal-content">
             <div class="modal-header">
-                <h5 class="modal-title"><i class="fas fa-check-circle text-success"></i> <span>Confirm app request</span></h5>
+                <h5 class="modal-title"><i class="fas fa-check-circle text-success"></i> <span>Подтвердите действие</span></h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
@@ -11,8 +11,8 @@
                 <p></p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-success" data-dismiss="modal">OK</button>
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Отмена</button>
             </div>
         </div>
     </div>
@@ -20,9 +20,9 @@
 
 <div id="PromiseAlert" class="modal">
     <div class="modal-dialog" role="document">
-        <div class="modal-content">
+        <div class="box modal-content">
             <div class="modal-header">
-                <h5 class="modal-title"><i class="fas fa-exclamation-triangle text-warning"></i> <span>The app reports</span></h5>
+                <h5 class="modal-title"><i class="fas fa-exclamation-triangle text-warning"></i> <span>Внимание</span></h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
@@ -31,7 +31,7 @@
                 <p></p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">OK</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
             </div>
         </div>
     </div>
@@ -39,9 +39,9 @@
 
 <div id="PromisePrompt" class="modal">
     <div class="modal-dialog" role="document">
-        <div class="modal-content">
+        <div class="box modal-content">
             <div class="modal-header">
-                <h5 class="modal-title"><i class="fas fa-question-circle text-primary"></i> <span>Prompt request</span></h5>
+                <h5 class="modal-title"><i class="fas fa-question-circle text-primary"></i> <span>Требуется ввод</span></h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
@@ -53,8 +53,8 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-success" data-dismiss="modal">OK</button>
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Отмена</button>
             </div>
         </div>
     </div>
