--- a/templates/prepare_to_game.html
+++ b/templates/prepare_to_game.html
@@ -11,6 +11,9 @@
   <h1 class="page_title">
     Подготовка к игре
   </h1>
+  <a class="btn button_primary" href="{{ game.link }}/swap">
+    Поменять команды местами
+  </a>
 </div>
 
 <form class="box non_space_box"
