--- a/templates/team_form.html
+++ b/templates/team_form.html
@@ -65,7 +65,7 @@
                     oninput="onInputPlayerEmail(this)"
                 >
               </div>
-              <fieldset class="players-additional_info" id="players-{}-additional_info" disabled>
+              <fieldset class="players-additional_info gray_disabled" id="players-{}-additional_info" disabled>
                 {% for field_name in additional_info_fields %}
                   <div class="row">
                   <label class="col-sm" for="players-{}-{{ field_name }}">
