--- a/templates/game_console.html
+++ b/templates/game_console.html
@@ -57,98 +57,106 @@
           </div>
         {% endfor %}
       </div>
-      <div class="w-100 m-2 captain_winner">
-        Победил капитан команды
-        <select class="ml-2 captain_winner_name" name="captain_winner">
-          <option {{'selected' if game.captain_winner is none else ''}} value="0"></option>
-          <option {{'selected' if game.captain_winner == game.team1 else ''}}
-                  value="{{game.team1.id}}">
-            {{game.team1.name}}
-          </option>
-          <option {{'selected' if game.captain_winner == game.team2 else ''}}
-                  value="{{game.team2.id}}">
-            {{game.team2.name}}
-          </option>
-        </select>
-      </div>
-
-      {% macro select_players(players, i, player_id=0) %}
-        <select class="custom-select" name="team{{i}}_players">
-          {% for player in players %}
-              <option value="{{player['id']}}" {{'selected' if player['id'] == player_id else ''}}>
-                {{player['fullname']}}
-              </option>
-          {% endfor %}
-        </select>
-      {% endmacro %}
-      {% macro input_points(i, val=0) %}
-        <input type="number"
-               name="team{{i}}_points"
-               value="{{val}}"
-               class="points_input"
-               min="0"
-               max="12"
-               >
-      {% endmacro %}
-      {% macro stars_block(i, val=0) %}
-        <div class="corner-lt stars" name="team{{i}}_stars">
-          <div class="star enabled add">*</div>
-          {% for _ in range(val) %}
-            <div class="star enabled remove">*</div>
-          {% endfor %}
+      <fieldset id="tournament_fieldset" class="filter_disabled m-0 p-0" style="min-inline-size: unset">
+        <div class="m-2">
+          <label for="captain_task">
+            Текст задачи конкурса капитанов
+          </label>
+          <textarea class="w-100 captain_text" name="captain_task" id="captain_task">
+            {{- game.protocol.get('captain_task', "") -}}
+          </textarea>
         </div>
-      {% endmacro %}
-      {% set round_types = [(1, '→'), (2, '←'), (3, '⇄'), (4, '⇆')] %}
-      <template id="protocol_row_template">
-        <tr class="round_form">
-          <td class="row_number symbols">0</td>
-          <td class="player">
-            {{select_players(game.protocol['teams'][0]['players'], 1)}}
-            {{stars_block(1, 0)}}
-          </td>
-          <td class="points symbols">
-            {{input_points(1)}}
-          </td>
-          <td class="symbols">
-            <input type="number" name="problem" value="0">
-          </td>
-          <td class="type symbols">
-            <select name="type">
-              {% for val, type in round_types %}
-                <option value="{{val}}">{{type}}</option>
-              {% endfor %}
-            </select>
-          </td>
-          <td class="points symbols">
-            {{input_points(2)}}
-          </td>
-          <td class="player">
-            {{select_players(game.protocol['teams'][1]['players'], 2)}}
-            {{stars_block(2, 0)}}
-          </td>
-          <td class="points judge_points symbols">
-            12
-          </td>
-          <td><textarea name="additional"></textarea></td>
-        </tr>
-      </template>
-      <template id="star_template">
-        <span class="star enabled remove">*</span>
-      </template>
-      <div class="protocol_in big_table_container">
-        <table class="info_table protocol-table m-2 rounded" id="protocol">
-          <tr class="table_header">
-            <th>№</th>
-            <th>Команда</th>
-            <th>Баллы</th>
-            <th>Задача</th>
-            <th>Вызов</th>
-            <th>Баллы</th>
-            <th>Команда</th>
-            <th>Жюри</th>
-            <th>Дополнительная информация</th>
+        <div class="w-auto captain_winner m-2">
+          Победил капитан команды
+          <select class="ml-2 captain_winner_name" name="captain_winner">
+            <option {{'selected' if game.captain_winner is none else ''}} value="0"></option>
+            <option {{'selected' if game.captain_winner == game.team1 else ''}}
+                    value="{{game.team1.id}}">
+              {{game.team1.name}}
+            </option>
+            <option {{'selected' if game.captain_winner == game.team2 else ''}}
+                    value="{{game.team2.id}}">
+              {{game.team2.name}}
+            </option>
+          </select>
+        </div>
+
+        {% macro select_players(players, i, player_id=0) %}
+          <select name="team{{i}}_players">
+            {% for player in players %}
+                <option value="{{player['id']}}" {{'selected' if player['id'] == player_id else ''}}>
+                  {{player['fullname']}}
+                </option>
+            {% endfor %}
+          </select>
+        {% endmacro %}
+        {% macro input_points(i, val=0) %}
+          <input type="number"
+                 name="team{{i}}_points"
+                 value="{{val}}"
+                 class="points_input"
+                 min="0"
+                 max="12"
+                 >
+        {% endmacro %}
+        {% macro stars_block(i, val=0) %}
+          <div class="corner-lt stars" name="team{{i}}_stars">
+            <div class="star enabled add">*</div>
+            {% for _ in range(val) %}
+              <div class="star enabled remove">*</div>
+            {% endfor %}
+          </div>
+        {% endmacro %}
+        {% set round_types = [(1, '→'), (2, '←'), (3, '⇄'), (4, '⇆'), (5, '⥇'), (6, '⬾')] %}
+        <template id="protocol_row_template">
+          <tr class="round_form">
+            <td class="row_number symbols">0</td>
+            <td class="player">
+              {{select_players(game.protocol['teams'][0]['players'], 1)}}
+              {{stars_block(1, 0)}}
+            </td>
+            <td class="points symbols">
+              {{input_points(1)}}
+            </td>
+            <td class="symbols">
+              <input type="number" name="problem" value="0">
+            </td>
+            <td class="type symbols">
+              <select name="type">
+                {% for val, type in round_types %}
+                  <option value="{{val}}">{{type}}</option>
+                {% endfor %}
+              </select>
+            </td>
+            <td class="points symbols">
+              {{input_points(2)}}
+            </td>
+            <td class="player">
+              {{select_players(game.protocol['teams'][1]['players'], 2)}}
+              {{stars_block(2, 0)}}
+            </td>
+            <td class="points judge_points symbols">
+              12
+            </td>
+            <td><textarea name="additional"></textarea></td>
           </tr>
-          <div class="rounds">
+        </template>
+        <template id="star_template">
+          <span class="star enabled remove">*</span>
+        </template>
+        <div class="protocol_in big_table_container">
+          <table class="info_table protocol-table m-2 rounded" id="protocol">
+            <tr class="table_header">
+              <th>№</th>
+              <th>Команда</th>
+              <th>Баллы</th>
+              <th>Задача</th>
+              <th>Вызов</th>
+              <th>Баллы</th>
+              <th>Команда</th>
+              <th>Жюри</th>
+              <th>Дополнительная информация</th>
+            </tr>
             {% if 'rounds' in game.protocol %}
               {% set rounds = game.protocol['rounds'] %}
             {% else %}
@@ -159,7 +167,7 @@
                 <td class="row_number symbols">{{loop.index}}</td>
                 <td class="player">
                   {{select_players(game.protocol['teams'][0]['players'], 1,
-                                  round['teams'][0]['player']['id'])}}
+                                    round['teams'][0]['player']['id'])}}
                   {{stars_block(1, round['teams'][0].get('stars', 0))}}
                 </td>
                 <td class="points symbols">
@@ -184,7 +192,7 @@
                 </td>
                 <td class="player">
                   {{select_players(game.protocol['teams'][1]['players'], 2,
-                                    round['teams'][1]['player']['id'])}}
+                                      round['teams'][1]['player']['id'])}}
                   {{stars_block(2, round['teams'][1].get('stars', 0))}}
                 </td>
                 <td class="points judge_points symbols">
@@ -193,28 +201,28 @@
                 <td><textarea name="additional">{{round['additional']}}</textarea></td>
               </tr>
             {% endfor %}
+          </table>
+        </div>
+        <div class="d-flex flex-wrap justify-content-between" id="protocol_buttons">
+          <div class="buttons-menu">
+            <button class="btn button_primary add_round">
+              Добавить строку
+            </button>
           </div>
-        </table>
-      </div>
-      <div class="d-flex flex-wrap justify-content-between" id="protocol_buttons">
-        <div class="buttons-menu">
-          <button class="btn button_primary add_round">
-            Добавить строку
-          </button>
+          <div class="buttons-menu">
+            <button class="btn button_success save">
+              Сохранить
+            </button>
+            <button class="btn button_warning end_editing">
+              {% if game.status == 3 %}
+                Закончить редактирование
+              {% else %}
+                Закончить игру
+              {% endif %}
+            </button>
+          </div>
         </div>
-        <div class="buttons-menu">
-          <button class="btn button_success save">
-            Сохранить
-          </button>
-          <button class="btn button_warning end_editing">
-            {% if game.status == 3 %}
-              Закончить редактирование
-            {% else %}
-              Закончить игру
-            {% endif %}
-          </button>
-        </div>
-      </div>
+      </fieldset>
   {% else %}
     <div class="box">
       <h4 style="color: red;">Для начала заполните участников</h4>
