--- a/static/css/style.css
+++ b/static/css/style.css
@@ -174,6 +174,16 @@ textarea.form__field-input {
     height: 160px;
 }
 
+.add-field {
+    height: 30px;
+    min-width: 100px;
+    width: 10%;
+
+    margin-bottom: 5px;
+
+    background: rgba(0, 0, 0, 0);
+}
+
 .s-with-error .form__field-input {
     border-color: #ff6e6e;
 }
@@ -661,6 +671,8 @@ fieldset {
 
 .gray_disabled:disabled {
     background: rgba(0,0,0,0.05);
+    padding: 5px 20px 5px 20px;
+    justify-content: right;
 }
 
 input[type='checkbox']{
