--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -46,9 +46,9 @@
         </div>
         <div class="input-group justify-content-end">
           {% if post %}
-            <input type="submit" class="btn btn-primary" value="Редактировать">
+            <input type="submit" class="btn button_primary" value="Редактировать">
           {% else %}
-            <input type="submit" class="btn btn-primary" value="Создать">
+            <input type="submit" class="btn button_primary" value="Создать">
           {% endif %}
         </div>
       </form>
