--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -29,7 +29,7 @@
           <div id="editor" class="feedback-field"></div>
         </div>
         <div class="input-group justify-content-end">
-          <input type="submit" class="btn btn-primary">
+          <input type="submit" class="btn button_primary">
         </div>
       </form>
     </div>
