--- a/templates/modal_windows.html
+++ b/templates/modal_windows.html
@@ -11,8 +11,8 @@
                 <p></p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Отмена</button>
+                <button type="button" class="ok btn button_primary" data-dismiss="modal">OK</button>
+                <button type="button" class="cancel btn btn-danger" data-dismiss="modal">Отмена</button>
             </div>
         </div>
     </div>
@@ -31,7 +31,7 @@
                 <p></p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
+                <button type="button" class="btn button_primary" data-dismiss="modal">OK</button>
             </div>
         </div>
     </div>
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
+                <button type="button" class="btn button_primary" data-dismiss="modal">OK</button>
                 <button type="button" class="btn btn-danger" data-dismiss="modal">Отмена</button>
             </div>
         </div>
