--- a/templates/team_form.html
+++ b/templates/team_form.html
@@ -93,8 +93,8 @@
         <ul class="form__field-list shadow_list" id="players">
         </ul>
       </div>
-      <button onclick="addUserEmailField()" type="button">+</button>
-      <button onclick="deleteUserEmailField()" type="button">-</button>
+      <button onclick="addUserEmailField()" type="button" class="btn btn-success">+</button>
+      <button onclick="deleteUserEmailField()" type="button" class="btn btn-danger">-</button>
       {{message}}
       <div class="form__buttons s-buttons">
         {{form.submit(
