--- a/templates/vk/vk_disintegration.html
+++ b/templates/vk/vk_disintegration.html
@@ -3,7 +3,7 @@
 <script src="{{url_for('static', filename='js/vk/disintegration.js')}}"></script>
 <button
   id="vk_disintegration"
-  class="btn btn-primary"
+  class="btn button_primapy"
   id="vk_login_button"
   onclick="VKdisintegration()"
 >
