--- a/templates/vk/vk_integration.html
+++ b/templates/vk/vk_integration.html
@@ -3,7 +3,7 @@
 <script src="{{url_for('static', filename='js/vk/integration.js')}}"></script>
 <button
   id="vk_integration"
-  class="btn btn-primary"
+  class="btn button_primary"
   id="vk_login_button"
   onclick="userAuth()"
 >
