Empty user in protocol

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -671,6 +671,9 @@ input[type='checkbox']{
     margin: 0 auto;
 }
 
+.border_red {
+    border: 2px solid #e91313 !important;
+}
 
 .centered_row > div{
     display: flex;
