Small errors update

--- a/templates/errors/error.html
+++ b/templates/errors/error.html
@@ -8,5 +8,7 @@
   <br>
   <h2>{{error.code}} — {{message}}</h2>
   <br>
+  <h5><a href={{ url_for('web_pages.feedback') }}> Написать нам </a></h5>
+  <p> Телеграмм, для важных сообщений: @i3Cheese </p>
   <p>{{error.description}}</p>
 {% endblock content %}
